<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pca9685_driver</name>
  <version>1.0.0</version>
  <description>
    ROS2 Jazzy driver node for the PCA9685 16-channel I2C PWM controller.
    Provides normalized and raw PWM control via topics and services.
  </description>
  <maintainer email="example@example.com">Krymorn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>pca9685_interfaces</depend>

  <exec_depend>python3-smbus2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
